tdf#161397 Fix incorrect glyphs for RTL font fallback

This change fixes an issue causing incorrect font fallback for certain
RTL grapheme clusters.

Change-Id: I6cff7f175b766d40c4faf204d1d65c8c366eb3e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168410
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>